refactor: use String.formatted instead of String.format